--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -106,3 +106,8 @@ deploy:
   type: git
   repo: git@github.com:wu1369955/wu1369955.github.io.git
   branch: main
+
+# image asset
+marked:
+  prependRoot: true
+  postAsset: true
